# hubris

./: Cargo.toml
.github/workflows/: dist.yml
app/demo-stm32h7-nucleo/: app-h743-rng-to-uart.toml  app-h743.toml  app-h753.toml
app/gemini-bu-rot/: app.toml
app/gimlet-rot/: Cargo.toml  app.toml  stage0-b-lab.toml  stage0-c-lab.toml
app/gimletlet/: app.toml
app/lpc55xpresso/: Cargo.toml  app-dice.toml  app-dicer-notasks.toml  app-dicer-tasks.toml  app-lpc55-uartecho-notasks.toml  app-lpc55-uartecho-tasks.toml  app-rng-to-uart.toml  app-sprot.toml  app-stage0-dice.toml  app.toml  stage0-dice.toml  stage0.toml
app/oxide-rot-1/: app-dev.toml  app.toml
app/rot-carrier/: Cargo.toml  app.toml  stage0.toml
chips/: stm32h7.toml
chips/lpc55/: chip.toml  memory.toml
drv/lpc55-gpio/: Cargo.toml
drv/lpc55-i2c/: Cargo.toml
drv/lpc55-rng/: Cargo.toml  build.rs
drv/lpc55-rng-api/: Cargo.toml
drv/lpc55-rng-core/: Cargo.toml
drv/lpc55-rng/src/: main.rs
drv/lpc55-romapi/: Cargo.toml
drv/lpc55-spi/: Cargo.toml
drv/lpc55-spi-server/: Cargo.toml
drv/lpc55-sprot-server/src/: handler.rs
drv/lpc55-swd/: Cargo.toml
drv/lpc55-syscon/: Cargo.toml
drv/lpc55-update-server/: Cargo.toml  build.rs
drv/lpc55-update-server/src/: main.rs
drv/lpc55-usart/: Cargo.toml
drv/lpc55-usart/src/: main.rs
drv/rng-api/src/: lib.rs
drv/sprot-api/src/: lib.rs
drv/stm32h7-rng/: Cargo.toml
drv/stm32h7-rng/src/: main.rs
drv/stm32h7-sprot-server/src/: main.rs
drv/user-leds/: Cargo.toml
idl/: attest.idol  null.idol  rotr.idol  sprot.idol
lib/dice/: Cargo.toml  build.rs
lib/dice-cert-sign/: Cargo.toml
lib/dice-cert-sign/src/: main.rs
lib/dice-cert-tmpl/: Cargo.toml
lib/dice-cert-tmpl/data/: alias-cert-tmpl.der  deviceid-selfcert-tmpl.der  ed25519-csr.der
lib/dice-cert-tmpl/src/: cert.rs  csr.rs  lib.rs
lib/dice/src/: alias_cert_tmpl.rs  cert.rs  csr.rs  deviceid_cert_tmpl.rs  deviceid_csr_tmpl.rs  handoff.rs  id_cert_tmpl.rs  lib.rs  mfg.rs  persistid_cert_tmpl.rs  persistid_csr_tmpl.rs  serial_certs.rs  spmeasure_cert_tmpl.rs  swdsp_cert_tmpl.rs  trust_quorum_dhe_cert_tmpl.rs
lib/lpc55-puf/src/: lib.rs
lib/lpc55-rng/: Cargo.toml
lib/lpc55-rng/src/: lib.rs
lib/lpc55-rot-startup/src/: dice_mfg_usart.rs
lib/lpc55-usart/: Cargo.toml
lib/lpc55-usart/src/: lib.rs
lib/null-api/: Cargo.toml  build.rs
lib/null-api/src/: lib.rs
reference/: index.html
stage0/: Cargo.toml  build.rs
stage0/src/: dice.rs  dice_mfg_self.rs  dice_mfg_usart.rs  image_header.rs  main.rs  puf.rs  usart.rs
task/attest/: Cargo.toml  build.rs
task/attest-api/: Cargo.toml
task/attest-api/src/: lib.rs
task/attest/src/: main.rs
task/dice-data/: Cargo.toml  README.mkdn
task/dice-data/src/: main.rs
task/dicer/: Cargo.toml  build.rs
task/dicer/src/: main.rs
task/ent-eat/: Cargo.toml
task/ent-eat/src/: main.rs
task/hiffy/: Cargo.toml
task/hiffy/src/: common.rs  lpc55.rs  main.rs  stm32g0.rs  stm32h7.rs
task/lpc55-uartecho/: Cargo.toml  build.rs
task/lpc55-uartecho/src/: main.rs
task/null/: Cargo.toml
task/null-client/: Cargo.toml
task/null-client/src/: main.rs
task/null-server/: Cargo.toml  build.rs
task/null-server/src/: main.rs
task/null/src/: main.rs
task/ping/: Cargo.toml
task/ping/src/: main.rs
task/puffer/: Cargo.toml
task/puffer/src/: main.rs
task/rng-usart-br/: Cargo.toml
task/rng-usart-br/src/: main.rs
task/rot-r/: Cargo.toml  README.mkdn  build.rs
task/rot-r/src/: main.rs
task/rot-report/: Cargo.toml
task/rot-report/src/: main.rs
task/rotr/: Cargo.toml  build.rs
task/rotr-api/: Cargo.toml  build.rs
task/rotr-api/src/: lib.rs
task/rotr/src/: main.rs
task/uartspew/: Cargo.toml
task/uartspew/src/: main.rs
test/tests-lpc55xpresso/: Cargo.toml
