[package]
name = "null-api"
version = "0.1.0"
edition = "2021"

[dependencies]
hubpack.workspace = true
num-traits.workspace = true
serde.workspace = true
userlib = {  path = "../../sys/userlib", features = ["panic-messages"]  }

[build-dependencies]
idol.workspace = true

[lib]
test = false
doctest = false
bench = false
