[package]
name = "attest-api"
version = "0.1.0"
edition = "2021"

[dependencies]
derive-idol-err = { path = "../../lib/derive-idol-err" }
gateway-messages = { workspace = true }
hubpack = { workspace = true }
idol-runtime = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
serde_with = { version = "3.3.0", default-features = false, features = ["macros"] }
sha2.workspace = true
sha3.workspace = true
userlib = {  path = "../../sys/userlib", features = ["panic-messages"]  }
zerocopy = { workspace = true }

[build-dependencies]
idol = { workspace = true }
serde = { workspace = true }

[lib]
test = false
doctest = false
bench = false
