[package]
name = "task-attest"
version = "0.1.0"
edition = "2021"

[dependencies]
dice = { path = "../../lib/dice" }
hubpack = { workspace = true }
idol-runtime = { workspace = true }
num-traits = { workspace = true }
ringbuf = { path = "../../lib/ringbuf" }
serde = { workspace = true }
stage0-handoff = { path = "../../lib/stage0-handoff" }
attest-api = { path = "../attest-api" }
unwrap-lite = { path = "../../lib/unwrap-lite" }
userlib = { path = "../../sys/userlib", features = ["panic-messages"] }
zerocopy = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
build-util = { path = "../../build/util" }
idol = { workspace = true }
serde = { workspace = true }

[[bin]]
name = "task-attest"
test = false
bench = false
