[package]
name = "task-null"
version = "0.1.0"
edition = "2021"

[dependencies]
attest-api.path = "../attest-api"
drv-rng-api.path = "../../drv/rng-api"
rand_core.workspace = true
ringbuf.path = "../../lib/ringbuf"
serde.workspace = true
sha3.workspace = true
userlib = { path = "../../sys/userlib", features = ["panic-messages"] }

[build-dependencies]
anyhow.workspace = true
build-util.path = "../../build/util"

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "task-null"
test = false
bench = false
