[package]
name = "task-ping"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { workspace = true }
userlib = { path = "../../sys/userlib", features = ["panic-messages"] }
drv-user-leds-api = { path = "../../drv/user-leds-api" }
ringbuf = { path = "../../lib/ringbuf" }
lpc55-pac = { workspace = true }
lpc55-puf = { path = "../../lib/lpc55-puf" }
salty = { workspace = true }

[build-dependencies]
build-util = { path = "../../build/util" }

[features]
uart = []

[[bin]]
name = "task-ping"
test = false
bench = false
