[package]
name = "task-rng-usart-br"
version = "0.1.0"
edition = "2021"

[dependencies]
drv-rng-api = { path = "../../drv/rng-api" }
drv-user-leds-api = {path = "../../drv/user-leds-api"}
rand_core = { version = "0.6" }
ringbuf = { path = "../../lib/ringbuf" }
userlib = {path = "../../sys/userlib", features = ["panic-messages"]}

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "task-rng-usart-br"
test = false
bench = false
