[package]
name = "task-rng-usart-br"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1"
drv-rng-api = { path = "../../drv/rng-api" }
rand_core = { version = "0.6" }
ringbuf = { path = "../../lib/ringbuf" }
userlib = {path = "../../sys/userlib", features = ["panic-messages"]}
drv-stm32h7-usart = { path = "../../drv/stm32h7-usart", optional = true }

[features]
h743 = ["drv-stm32h7-usart/h743"]
h753 = ["drv-stm32h7-usart/h753"]
usart1 = []
usart2 = []
usart3 = []
uart4 = []
uart5 = []
usart6 = []
uart7 = []

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "task-rng-usart-br"
test = false
bench = false
