[package]
name = "rot-report"
version = "0.1.0"
edition = "2021"

[dependencies]
dice = {path = "../../lib/dice"}
ringbuf = {path = "../../lib/ringbuf"}
salty = "0.2"
userlib = {path = "../../sys/userlib"}

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "rot-report"
test = false
bench = false
