[package]
name = "task-rotr"
version = "0.1.0"
edition = "2021"

[dependencies]
dice = { path = "../../lib/dice" }
idol-runtime = { workspace = true }
lpc55-pac = { workspace = true }
lpc55-puf = { path = "../../lib/lpc55-puf" }
num-traits = { workspace = true }
ringbuf = { path = "../../lib/ringbuf" }
task-rotr-api = { path = "../rotr-api" }
userlib = { path = "../../sys/userlib", features = ["panic-messages"] }
zerocopy = { workspace = true }

[build-dependencies]
idol = { workspace = true }

[[bin]]
name = "task-rotr"
test = false
bench = false
