[package]
name = "task-uartspew"
version = "0.1.0"
edition = "2018"

[dependencies]
ringbuf = {path = "../../lib/ringbuf"}
userlib = {path = "../../sys/userlib", features = ["panic-messages"]}

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "task-uartspew"
test = false
bench = false
